--- a/src/core/asapay/templates/dashboard/dashboard.html
+++ b/src/core/asapay/templates/dashboard/dashboard.html
@@ -1,1 +1,38 @@
 {% extends "base.html" %}
+{% block styles %}
+{{ block.super }}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/dashboard/style.css' %}">
+{% endblock %}
+{% block content %}
+<div class="row main">
+    <div class="row users">
+        <div class="card">
+        <h6 class="card-title">Users: {{ total_users.0.0 }}</h6>
+            <div class="detail-titles">
+                <h5>Id</h5>
+                <!-- <h5>Name</h5> -->
+                <h5>Phone Number</h5>
+                <!-- <h5>Gender</h5> -->
+                <h5>Status</h5>
+            </div>
+            <div class="user-details">
+                {% for user in users %}
+                <div class="details">
+                    <p id="id">{{ user.0 }}</p>
+                    <!-- <p id="name">{{ user.3 }}</p> -->
+                    <p id="email">{{ user.4 }}</p>
+                    {% if user.13 >= 1 %}
+                    <p id="status">Active</p>
+                    {% else %}
+                    <p id="status">Inactive</p>
+                    {% endif %}
+                </div>
+                {% endfor %}
+                <h5 id="title">Total Users: {{user.legth}}</h5>
+            </div>
+        </div>
+    </div>
+    <div class="payments"></div>
+</div>
+{% endblock %}
