--- a/src/core/asapay/templates/base.html
+++ b/src/core/asapay/templates/base.html
@@ -34,17 +34,19 @@
     {% endblock %}
     {% block header %}
         <header>
-            <nav>
-                <div class="nav-wrapper">
-                    <div class="row">
-                        <a href="#!" class="brand-logo">Asapay</a>
-                        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                        <ul class="right hide-on-med-and-down">
-                            <li><a href="#!"><i class="material-icons">search</i></a></li>
-                        </ul>
+            <div class="navbar-fixed">
+                <nav>
+                    <div class="nav-wrapper">
+                        <div class="row">
+                            <a href="#!" class="brand-logo">Asapay</a>
+                            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                            <ul class="right hide-on-med-and-down">
+                                <li><a href="#!"><i class="material-icons">search</i></a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
             <ul id="slide-out" class="sidenav sidenav-fixed invesible-top">
                 <li><div class="user-view">
                 <div class="background">
