--- a/src/core/asapay/static/css/main.css
+++ b/src/core/asapay/static/css/main.css
@@ -22,5 +22,10 @@ nav {
 }
 
 a .fas {
-    color: #0D0000;
+    /* color: #0D0000; */
+}
+
+.background img{
+    height: 100%;
+    width: 100%;
 }
