--- a/src/core/asapay/templates/base.html
+++ b/src/core/asapay/templates/base.html
@@ -38,7 +38,7 @@
                 <nav>
                     <div class="nav-wrapper">
                         <div class="row">
-                            <a href="#!" class="brand-logo">Asapay</a>
+                            <a href="#!" class="brand-logo">Asapay Admin Dashboard</a>
                             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                             <ul class="right hide-on-med-and-down">
                                 <li><a href="#!"><i class="material-icons">search</i></a></li>
@@ -50,17 +50,15 @@
             <ul id="slide-out" class="sidenav sidenav-fixed invesible-top">
                 <li><div class="user-view">
                 <div class="background">
-                    <!-- <img src="images/office.jpg"> -->
+                    <img src="{% static 'images/splash.jpg' %}">
                 </div>
-                <!-- <a href="#user"><img class="circle" src="images/yuna.jpg"></a> -->
-                <a href="#!"><i class="fas fa-user-circle fa-4x"></i></a>
-                <a href="#name"><span class="black-text name">Admin</span></a>
-                <a href="#email"><span class="black-text email">admin@admin.com</span></a>
+                <a href="#!"><i class="fas fa-user-circle fa-4x white-text"></i></a>
+                <a href="#name"><span class="white-text name">Admin</span></a>
+                <a href="#email"><span class="white-text email">admin@admin.com</span></a>
                 </div></li>
-                <li><a href="#!" class="waves-effect"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-                <li><a href="#!" class="waves-effect"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+                <li><a href="#users" class="waves-effect"><i class="fas fa-user-circle fa-2x"></i>Users</a></li>
+                <li><a href="#payments" class="waves-effect"><i class="fas fa-dollar-sign fa-2x"></i>Payments</a></li>
             </ul>
-            <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
         </header>
     {% endblock %}
     {% block content %}
