--- a/src/core/asapay/templates/base.html
+++ b/src/core/asapay/templates/base.html
@@ -37,7 +37,7 @@
             <div class="navbar-fixed">
                 <nav>
                     <div class="nav-wrapper">
-                        <div class="row">
+                        <div class="row hide-on-med-and-down">
                             <a href="#!" class="brand-logo">Asapay Admin Dashboard</a>
                             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                             <ul class="right hide-on-med-and-down">
