--- a/src/core/asapay/templates/dashboard/dashboard.html
+++ b/src/core/asapay/templates/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 {% load dashboard_extras %}
 <div class="row main">
     <div class="row users" id="users">
-        <div class="col s12">
+        <div class="col m12">
             <div class="card users-card">
                 <div class="card-title">
                     <span id="users-title">
